--- a/Common/Common.vcxproj
+++ b/Common/Common.vcxproj
@@ -21,6 +21,10 @@
   <ItemGroup>
     <ClInclude Include="Packet.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Calculate.fbs" />
+    <None Include="Result.fbs" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
