--- a/Common/Common.vcxproj.filters
+++ b/Common/Common.vcxproj.filters
@@ -10,4 +10,8 @@
       <Filter>Header</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Calculate.fbs" />
+    <None Include="Result.fbs" />
+  </ItemGroup>
 </Project>
