FlatBuffe 정리해서 만들어 주기

--- a/Common/Common.vcxproj
+++ b/Common/Common.vcxproj
@@ -22,8 +22,7 @@
     <ClInclude Include="Packet.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Calculate.fbs" />
-    <None Include="Result.fbs" />
+    <None Include="UserEvents.fbs" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
