--- a/Common/Common.vcxproj.filters
+++ b/Common/Common.vcxproj.filters
@@ -11,7 +11,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Calculate.fbs" />
-    <None Include="Result.fbs" />
+    <None Include="UserEvents.fbs" />
   </ItemGroup>
 </Project>
